--- a/index.html
+++ b/index.html
@@ -16,10 +16,10 @@
         <label for="check" class="checkbtn">
             <i class="fas fa-bars"></i>
         </label>
-        <label class="logo">A&G</label>
+        <label class="logo">N&R</label>
         <ul class="text">
             <li><a href="#story" onclick="myFunction()">OUR STORY</a></li>
-            <li><a href="#stay" onclick="myFunction()">TRAVEL & STAY</a></li>
+            <li><a href="#stay" onclick="myFunction()">VENUE DETAILS</a></li>
             <li><a href="#registry" onclick="myFunction()">PROMISES</a></li>
         </ul>
     </nav>
@@ -27,12 +27,12 @@
 
     <div class="home hz-margin">
         <h3>We'er getting married</h3>
-        <h1>Aman. & Gur.</h1>
+        <h1>Namratha. & Rishik.</h1>
         <div class="container-out">
             
             <div class="container-in text">
-                Friday, Oct. 20, 2023 <br>
-                ITC Sonar Bangla, Kolkata
+                Sunday, April. 20, 2025 <br>
+                R.T.P. Convention Center, Tumkur
 
                 <button class="huge-btn">RSVP</button>
             </div>
@@ -49,12 +49,12 @@
         <div class="timeline-container">
             <div class="timeline-img"></div>
             <div class="timings">
-                <h3>01.&nbsp &nbsp Ceremony</h3>
-                <div class="text">Friday, Oct. 20, 2023 <br>
-                    ITC Sonar Bangla, Kolkata</div>
+                <h3>01.&nbsp &nbsp Muhurtham</h3>
+                <div class="text">Sunday, April. 20, 2025 <br>
+                    R.T.P. Convention Center, Tumkur</div>
                 <h3>02.&nbsp &nbsp Reception</h3>
-                <div class="text">Sunday, Oct. 22, 2023 <br>
-                    Poddar Vihar, Kolkata</div>
+                <div class="text">Saturday, April. 19, 2025 <br>
+                    R.T.P. Convention Center, Tumkur</div>
             </div>
         </div>
     </div>
@@ -89,7 +89,7 @@
 
 
             <div id="stay">
-                <h2 class="reveal">Travel and Stay</h2>
+                <h2 class="reveal">Venue details</h2>
                 <div class="stay-container reveal">
                     <div class="stay-item">
                         <h3>01. <br>
@@ -137,9 +137,9 @@
 
             <footer>
                 <h2>Give us a Call</h2>
-                <h2>Amandeep: 123-456-7890</h2>
-                <h2>Gurpreet: 123-456-7890</h2>
-                <div class="text">© 2023 for Aman and Gur. Made by <a href="https://twitter.com/NathArchak" class="text">@NathArchak</a></div>
+                <h2>Namratha: 8310391637</h2>
+                <h2>Rishik: 8971168374</h2>
+                <div class="text">© 2025 for Namratha and Rishik</a></div>
             </footer>
         </div>
     </div>
