--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
                 Sunday, April. 20, 2025 <br>
                 R.T.P. Convention Center, Tumkur
 
-                <button class="huge-btn">RSVP</button>
+                <button class="huge-btn"><a href="https://maps.app.goo.gl/Ufj8eJgLkgPYiwpHA" target="_blank">Directions</a></button>
             </div>
             <div class="home-img" id="home-img-lg"></div>
         </div>
@@ -49,11 +49,12 @@
         <div class="timeline-container">
             <div class="timeline-img"></div>
             <div class="timings">
-                <h3>01.&nbsp &nbsp Muhurtham</h3>
-                <div class="text">Sunday, April. 20, 2025 <br>
+                
+                <h3>01.&nbsp &nbsp Reception</h3>
+                <div class="text">Saturday, April. 19, 2025, 7:00 P.M. <br>
                     R.T.P. Convention Center, Tumkur</div>
-                <h3>02.&nbsp &nbsp Reception</h3>
-                <div class="text">Saturday, April. 19, 2025 <br>
+                    <h3>02.&nbsp &nbsp Muhurtham</h3>
+                <div class="text">Sunday, April. 20, 2025, 12:00 P.M. <br>
                     R.T.P. Convention Center, Tumkur</div>
             </div>
         </div>
@@ -68,7 +69,9 @@
                 <h3 class="reveal">Not Just an <br>
                     Ordinary Love Story
                 </h3>
-                <p class="text reveal">We met on ferry. Not sure if the kids remember that one. His female housemates encouraged him to get on it - he wasn't keen, but one night we ended up chatting and the next day we met up at the Tellypara Ghat. We spent nine hours together by the river, and I bought him a cotton candy and he says that's how he knew I was the one.</p>
+                <p class="text reveal">Ours is a story written in the stars, but it all began in the simplest of moments—one glance in the college corridor. From that very instant, I knew she was the one.
+
+                    Seven beautiful years have passed since that day—years filled with love, laughter, and an unbreakable bond that has only grown stronger. Through every joy and every challenge, we've stood by each other, hand in hand. And now, as we take this next step, we can't wait to begin the most beautiful chapter of our lives—together, forever.</p>
             </div>
 
 
@@ -92,25 +95,13 @@
                 <h2 class="reveal">Venue details</h2>
                 <div class="stay-container reveal">
                     <div class="stay-item">
-                        <h3>01. <br>
+                        <h3>
                             Getting There
                         </h3>
-                        <div class="text">Easy-to-follow <br> directions to the venue</div>
-                        <div class="text links">MAP & DETAILS</div>
-                    </div>
-                    <div class="stay-item">
-                        <h3>02. <br>
-                            Once You're There
-                        </h3>
-                        <div class="text">Some fun things to do in <br> the area</div>
-                        <div class="text links">OUR RECOMMENDATIONS</div>
-                    </div>
-                    <div class="stay-item">
-                        <h3>03. <br>
-                            Where to Stay
-                        </h3>
-                        <div class="text">Hotels and B&Bs <br> to check out</div>
-                        <div class="text links">LODGING OPTIONS</div>
+                        <div class="text"> <br>Bangalore-Shimoga Bypass Rd, <br> beside old Anjaneya Temple, <br> Shetty Halli, Tumakuru, <br> Karnataka 572103
+                        <div class="text links">
+                            <a href="https://maps.app.goo.gl/Ufj8eJgLkgPYiwpHA" target="_blank">MAP & DETAILS</a>
+                        </div>
                     </div>
                 </div>
             </div>
@@ -120,7 +111,7 @@
                 <div class="registry-container reveal">
                     <h3>Promises</h3>
                     <div class="text">
-                        I will provide welfare and happiness for you and the children that we bear and you shall offer me food and help whenever it is required. Together, we will protect our children and home and stand as each other's strength and courage. I will put every other person secodary to you. You make my like complete and promise to respect you. God bless you, my best friend. I pray thee, may my presence fill our life with joy and prospers.
+                        I vow to share my fries (sometimes), laugh at your bad jokes, and stand by your side through every adventure life throws our way. Together, we'll build a home filled with love, laughter, and way too much binge-watching. You’re my best friend, my favorite human, and the only person I’d willingly share dessert with—most of the time.
                     </div>
                     <button class="huge-btn text">BLESS US</button>
                 </div>
@@ -131,7 +122,6 @@
 
             <div class="parting-message reveal">
                 <h1>Hope to See You!</h1>
-                <button class="huge-btn">RSVP</button>
             </div>
 
 
